#5 - Spark 4 first cut RC5 ~cut-release